Before 2022fall mid-term

--- a/sections/ReferenceBook.tex
+++ b/sections/ReferenceBook.tex
@@ -55,7 +55,7 @@
     \bibitem{随机过程ref1}
     Random Processes for Engineers. Bruce Hajek. Cambridge University Press
     \bibitem{随机过程ref2}
-    应用随机过程. 林元烈. 
+    应用随机过程. 林元烈. 清华大学出版社.
 
 
 \end{thebibliography}
